@@ -46,6 +46,7 @@
         ul li ul li {
             list-style-type: disc;
         }
+
     </style>
 </head>
 
@@ -103,6 +104,10 @@
     </li>
     <li><span class="label label-warning">Bugfix</span> Fails to launch in the newly created virtual desktop (Windows) (<a
         href="https://trac.cyberduck.io/ticket/10467">#10467</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Adding bookmarks for multiple accounts using OAuth (Dropbox,
+        Google Drive, OneDrive) (<a
+            href="https://trac.cyberduck.io/ticket/10562">#10562</a>)
     </li>
 </ul>
 
